--- a/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
+++ b/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
@@ -4837,9 +4837,11 @@
       "cell_type": "markdown",
       "source": [
         "## **Conclusions:**\n",
-        "* The main challenge we faced during this activity is that training time for this type of pre-trained models take several hours to complete. For solving this issue, each of us tried different models separately until we got the 3 accuracy results required from the 3 pre-trained models.\n",
+        "* Using a pre-trained model allows us to convert into a block all their layers (like the ones from ResNet18, ResNet50 & DenseNet169) for our \"new model\" in which we only need to change the last layer to fit it to our particular problem, CIFAR10 with 10 classes in this particular case. This technique allows to use the great learned abstraction from a large dataset like Imagenet in our pre-trained model and make it work for basically any type of problem. Also this approach is really useful for trained models when we don't have a significantly large image dataset.\n",
+        "* The main challenge we faced during this activity is that training time for this type of pre-trained models take several hours to complete (using cpu). For solving this issue, each of us tried different models separately until we got the 3 accuracy results required from the 3 pre-trained models.\n",
         "* Other issues we had were to know & understand the parameters and the amount of objects to evaluate in each model.\n",
-        "* Overall we can see that the pre-trained model ResNet50 got better accuracy results in comparison with the other 2 (ResNet18 & DenseNet169), but not significantly higher in comparison with the accuracy results from simpler CNN models we created in activity \"A2b DL TC5033 AD2023\"."
+        "* Overall we can see that the pre-trained model ResNet50 got better accuracy results in comparison with the other 2 (ResNet18 & DenseNet169), but not significantly higher. All of them are getting really close to the 80% accuracy.\n",
+        "* Also we consider that the obtain accuracy here isn't significantly higher in comparison with the accuracy results from simpler CNN models that we created in activity \"A2b DL TC5033 AD2023\"."
       ],
       "metadata": {
         "id": "_aFLiGeKIcFk"
