--- a/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
+++ b/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
@@ -4854,7 +4854,8 @@
         "* Model Zoo — PyTorch/Serve master documentation. (n.d.). https://pytorch.org/serve/model_zoo.html\n",
         "* Pepe Cantoral, Ph.D. (2022c, April 27). ¿Qué es ResNet? – Redes Neuronales Residuales [Video]. YouTube. https://www.youtube.com/watch?v=gKCuWBpg1bU\n",
         "* Pepe Cantoral, Ph.D. (2022b, January 15). Red Neuronal Convolucional en PyTorch / Tutorial de PyTorch para CNN - Parte 1 [Video]. YouTube. https://www.youtube.com/watch?v=yUB9JQQVtoU\n",
-        "* Pepe Cantoral, Ph.D. (2022d, January 18). Red Neuronal Convolucional en PyTorch con Batch Normalization/Tutorial de PyTorch para CNNs -Parte 2 [Video]. YouTube. https://www.youtube.com/watch?v=NLrQZwnWjvI"
+        "* Pepe Cantoral, Ph.D. (2022d, January 18). Red Neuronal Convolucional en PyTorch con Batch Normalization/Tutorial de PyTorch para CNNs -Parte 2 [Video]. YouTube. https://www.youtube.com/watch?v=NLrQZwnWjvI\n",
+        "* Pepe Cantoral, Ph.D. (2021, October 4). Tutorial de Transfer Learning utilizando PyTorch y  RESNET [Video]. YouTube. https://www.youtube.com/watch?v=Y_WAXe4LprY"
       ],
       "metadata": {
         "id": "yOv2F0k2NNb7"
