Creado mediante Colaboratory

--- a/A3a_DL_TC5033_embeddings_hw1.ipynb
+++ b/A3a_DL_TC5033_embeddings_hw1.ipynb
@@ -426,6 +426,99 @@
     {
       "cell_type": "code",
       "source": [
+        "# analogy\n",
+        "def analogy(word1, word2, word3, embeddings_dict):\n",
+        "  pass"
+      ],
+      "metadata": {
+        "id": "fUoA4CgEtTci"
+      },
+      "id": "fUoA4CgEtTci",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "analogy('man', 'king', 'woman', embeddings_dict)"
+      ],
+      "metadata": {
+        "id": "gCupN4o3tXDK"
+      },
+      "id": "gCupN4o3tXDK",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# most similar\n",
+        "def find_most_similar(word, embeddings_dict, top_n=10):\n",
+        "  pass"
+      ],
+      "metadata": {
+        "id": "J7VjOmuGtXA7"
+      },
+      "id": "J7VjOmuGtXA7",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "most_similar = find_most_similar('mexico', embeddings_dict)\n",
+        "print(most_similar)"
+      ],
+      "metadata": {
+        "id": "nv5z9DyFtW-a"
+      },
+      "id": "nv5z9DyFtW-a",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_PcbOTpIthh1"
+      },
+      "id": "_PcbOTpIthh1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FgyDDVPBthfM"
+      },
+      "id": "FgyDDVPBthfM",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "da0EmiDetW8C"
+      },
+      "id": "da0EmiDetW8C",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XTQGFxl3tW5K"
+      },
+      "id": "XTQGFxl3tW5K",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import gensim.downloader as api\n",
         "word_vectors = api.load(\"glove-wiki-gigaword-100\")"
       ],
@@ -566,58 +659,6 @@
       "source": [
         "most_similar = find_most_similar('mexico', embeddings_dict)\n",
         "print(most_similar)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "result = word_vectors.most_similar(positive=['woman', 'king'], negative=['man'])\n",
-        "most_similar_key, similarity = result[0]  # look at the first match\n",
-        "print(f\"{most_similar_key}: {similarity:.4f}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "g3ugDYzOpGO7",
-        "outputId": "5fab2311-bbdc-413c-c395-d37b25220df8"
-      },
-      "id": "g3ugDYzOpGO7",
-      "execution_count": 141,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "queen: 0.7699\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "result = word_vectors.similar_by_word(\"cat\")\n",
-        "most_similar_key, similarity = result[0]  # look at the first match\n",
-        "print(f\"{most_similar_key}: {similarity:.4f}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jmCmj2_vprlz",
-        "outputId": "7f342423-1c5a-429a-8325-c5c4386a1b98"
-      },
-      "id": "jmCmj2_vprlz",
-      "execution_count": 142,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "dog: 0.8798\n"
-          ]
-        }
       ]
     },
     {
