Creado mediante Colaboratory

--- a/A3a_DL_TC5033_embeddings_hw1.ipynb
+++ b/A3a_DL_TC5033_embeddings_hw1.ipynb
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "4af04b9d",
       "metadata": {
         "id": "4af04b9d"
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 2,
       "id": "8c3c9d2a",
       "metadata": {
         "id": "8c3c9d2a"
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 3,
       "id": "25a1eae6",
       "metadata": {
         "code_folding": [],
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 4,
       "id": "347a0e5e",
       "metadata": {
         "code_folding": [],
@@ -164,10 +164,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q7DGkUe4LI9h",
-        "outputId": "5c367a6b-c828-4ec4-94e6-9783ea45823c"
+        "outputId": "733630a8-994a-48e1-91c7-44e5db7664e0"
       },
       "id": "q7DGkUe4LI9h",
-      "execution_count": 55,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,13 +177,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 7,
       "id": "1f01b760",
       "metadata": {
         "code_folding": [
@@ -194,7 +194,7 @@
       "outputs": [],
       "source": [
         "# Serialize\n",
-        "with open('embeddings_dict_300D.pkl', 'wb') as f:\n",
+        "with open('embeddings_dict_100D.pkl', 'wb') as f:\n",
         "    pickle.dump(embeddings_dict, f, pickle.HIGHEST_PROTOCOL)"
       ]
     },
@@ -202,14 +202,14 @@
       "cell_type": "code",
       "source": [
         "# Deserialize\n",
-        "with open('embeddings_dict_300D.pkl', 'rb') as f:\n",
+        "with open('embeddings_dict_100D.pkl', 'rb') as f:\n",
         "    embeddings_dict = pickle.load(f)"
       ],
       "metadata": {
         "id": "tYLEnTBCu8iG"
       },
       "id": "tYLEnTBCu8iG",
-      "execution_count": 60,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -222,10 +222,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f036297a-3ab5-45ec-983e-60fc217486a7"
+        "outputId": "0a9005f5-21b6-4015-e278-5a62fef9d99e"
       },
       "id": "lOVad6FBv0X8",
-      "execution_count": 62,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 11,
       "id": "8b0991a9",
       "metadata": {
         "id": "8b0991a9"
@@ -281,14 +281,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 12,
       "id": "a16259ec",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a16259ec",
-        "outputId": "50e9011e-de6e-48b6-c835-e1685056190e"
+        "outputId": "65c498ba-97c0-44ac-b067-75c200860194"
       },
       "outputs": [
         {
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 13,
       "id": "3d3ffaa4",
       "metadata": {
         "id": "3d3ffaa4"
@@ -341,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 14,
       "id": "9b1b120a",
       "metadata": {
         "id": "9b1b120a"
@@ -357,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 15,
       "id": "87d33789",
       "metadata": {
         "id": "87d33789",
@@ -365,7 +365,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 430
         },
-        "outputId": "c4dae10b-5004-439d-85a2-e69b43d392eb"
+        "outputId": "ed35058f-9300-407b-be84-94b46e1ab42e"
       },
       "outputs": [
         {
@@ -386,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 16,
       "id": "f22bacb4",
       "metadata": {
         "colab": {
@@ -394,7 +394,7 @@
           "height": 430
         },
         "id": "f22bacb4",
-        "outputId": "4d38e1c3-e0d3-4cd1-8e81-90549440be33"
+        "outputId": "d8810a36-36be-47d0-988d-8511e8af7404"
       },
       "outputs": [
         {
@@ -478,7 +478,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for i, w in enumerate(most_similar, 1):\n",
+        "    print(f'{i} ---> {w[0]}')"
+      ],
       "metadata": {
         "id": "_PcbOTpIthh1"
       },
@@ -490,9 +493,156 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
+        "id": "qnCqoeMED3dJ"
+      },
+      "id": "qnCqoeMED3dJ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "l1tNSUKMD7bj"
+      },
+      "id": "l1tNSUKMD7bj",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jdddPyPgD6iK"
+      },
+      "id": "jdddPyPgD6iK",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8XIs4tFXD6Zw"
+      },
+      "id": "8XIs4tFXD6Zw",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# most similar\n",
+        "def find_most_similar(word, embeddings_dict, top_n=10):\n",
+        "  #for w in embeddings_dict:\n",
+        ""
+      ],
+      "metadata": {
         "id": "FgyDDVPBthfM"
       },
       "id": "FgyDDVPBthfM",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word3 = 'star'\n",
+        "list_dist = []\n",
+        "\n",
+        "for w in embeddings_dict:\n",
+        "  dist = np.absolute(np.linalg.norm(embeddings_dict[w]-embeddings_dict[word3]))\n",
+        "  list_dist.append(dist)\n",
+        "list_dist.sort()\n"
+      ],
+      "metadata": {
+        "id": "mMnzEttAENsb"
+      },
+      "id": "mMnzEttAENsb",
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_dist[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WXxyroOiGlUJ",
+        "outputId": "34c887fe-b44c-4c5b-ac9c-dc936cbe644b"
+      },
+      "id": "WXxyroOiGlUJ",
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.0060697"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embeddings_dict[word3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cbcGp9ZLENoy",
+        "outputId": "cd7b96f5-3687-40c9-b683-f1be08d518bb"
+      },
+      "id": "cbcGp9ZLENoy",
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.28771  ,  0.49989  ,  0.71322  , -0.70055  , -0.17875  ,\n",
+              "        0.14255  ,  0.019667 , -0.012744 , -0.65036  , -0.018394 ,\n",
+              "       -0.39262  , -0.44873  , -0.31983  ,  0.021026 , -0.17765  ,\n",
+              "       -0.68738  ,  1.4119   , -0.12378  ,  0.34377  ,  0.88918  ,\n",
+              "       -0.06373  ,  0.083162 , -1.1368   ,  0.4334   ,  1.2694   ,\n",
+              "        0.5507   ,  0.43479  , -0.29717  ,  0.20241  , -0.21794  ,\n",
+              "        0.023685 ,  0.35874  ,  0.012548 ,  0.17063  ,  0.71351  ,\n",
+              "       -0.43903  ,  0.030226 ,  0.63585  , -0.71641  , -0.02689  ,\n",
+              "        0.17911  ,  0.52016  ,  0.10594  , -0.091876 ,  1.0469   ,\n",
+              "        0.22515  , -0.60811  , -0.18009  ,  0.82578  , -0.19264  ,\n",
+              "        0.18465  , -0.069385 ,  0.34568  ,  0.71138  ,  0.53258  ,\n",
+              "       -2.5261   , -1.0477   ,  0.86132  ,  1.3361   ,  0.95517  ,\n",
+              "       -0.59169  ,  1.411    , -0.38128  ,  0.29419  ,  0.5895   ,\n",
+              "       -0.22058  ,  0.90855  ,  0.63673  , -0.41141  ,  0.89037  ,\n",
+              "        0.19463  , -0.21206  , -0.3161   ,  0.0080869,  0.19553  ,\n",
+              "       -0.47853  ,  0.55202  , -0.1387   , -0.35548  , -0.41713  ,\n",
+              "        0.09199  , -0.27981  ,  0.22213  , -0.3263   , -0.51395  ,\n",
+              "       -0.64345  , -0.041641 ,  0.30336  ,  0.42036  , -0.75737  ,\n",
+              "       -0.41822  ,  0.53856  , -0.21102  ,  0.015586 , -0.36062  ,\n",
+              "        0.090941 , -0.36615  , -0.27127  ,  0.2402   ,  0.12824  ],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KD_pDMfvENmF"
+      },
+      "id": "KD_pDMfvENmF",
       "execution_count": null,
       "outputs": []
     },
@@ -508,7 +658,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#CON GENSIM... lo dejo solo para revisar resultados con numpy... BORRAR ANTES DE SUBIR."
+      ],
       "metadata": {
         "id": "XTQGFxl3tW5K"
       },
