Creado mediante Colaboratory

--- a/A3a_DL_TC5033_embeddings_hw1.ipynb
+++ b/A3a_DL_TC5033_embeddings_hw1.ipynb
@@ -534,14 +534,19 @@
       "source": [
         "# most similar\n",
         "def find_most_similar(word, embeddings_dict, top_n=10):\n",
-        "  #for w in embeddings_dict:\n",
-        ""
+        "  list_dist = []\n",
+        "  list_keys = []\n",
+        "  for w in embeddings_dict:\n",
+        "    dist = np.absolute(np.linalg.norm(embeddings_dict[w]-embeddings_dict[word3]))\n",
+        "    list_dist.append(dist)\n",
+        "  list_dist.sort()\n",
+        "  return list_dist[1:top_n+1]"
       ],
       "metadata": {
         "id": "FgyDDVPBthfM"
       },
       "id": "FgyDDVPBthfM",
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -565,27 +570,36 @@
     {
       "cell_type": "code",
       "source": [
-        "list_dist[1]"
+        "list_dist[1:11]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WXxyroOiGlUJ",
-        "outputId": "34c887fe-b44c-4c5b-ac9c-dc936cbe644b"
+        "outputId": "f99c5797-761c-452e-dc9b-cb1f9682b8c6"
       },
       "id": "WXxyroOiGlUJ",
-      "execution_count": 27,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.0060697"
+              "[3.0060697,\n",
+              " 4.165171,\n",
+              " 4.6715603,\n",
+              " 4.8470235,\n",
+              " 4.857086,\n",
+              " 4.86452,\n",
+              " 4.8705707,\n",
+              " 4.879106,\n",
+              " 4.9203835,\n",
+              " 4.9338746]"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 29
         }
       ]
     },
