--- a/TC4033_Activity3a_ID01.ipynb
+++ b/TC4033_Activity3a_ID01.ipynb
@@ -423,14 +423,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "0003ce18",
-      "metadata": {
-        "id": "0003ce18"
-      },
-      "outputs": [],
       "source": [
-        "# analogy\n",
+        "# Funtion for computing cosine similarity between 2 vectors, required for analogy function:\n",
         "def cosine_similarity(vec_a, vec_b):\n",
         "    \"\"\"\n",
         "    Calculate the cosine similarity between two vectors.\n",
@@ -468,31 +462,63 @@
         "                max_similarity = similarity\n",
         "                result_word = word\n",
         "\n",
-        "    return result_word"
+        "    return print(word1, \"is to\", word2,\"as\" , word3, \"is to\", result_word)"
+      ],
+      "metadata": {
+        "id": "VJnF3QXcEHyj"
+      },
+      "id": "VJnF3QXcEHyj",
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's test our analogy function:\n",
+        "analogy('man', 'king', 'woman', embeddings_dict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qWKxYacJEoeg",
+        "outputId": "8ba18562-9be7-471c-a8b3-9d83aab8d6ba"
+      },
+      "id": "qWKxYacJEoeg",
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "man is to king as woman is to queen\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "9c02ec01",
+      "source": [
+        "# Testing analogy funtion with another example:\n",
+        "analogy('woman', 'lady', 'man', embeddings_dict)"
+      ],
       "metadata": {
-        "id": "9c02ec01",
-        "outputId": "72fcb8c0-a773-4896-daa9-7d59ba82dd81"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3okve3W_EzGg",
+        "outputId": "6c90d285-da9e-4e15-a09c-f572fe46a478"
       },
+      "id": "3okve3W_EzGg",
+      "execution_count": 26,
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "'queen'"
-            ]
-          },
-          "execution_count": 32,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "woman is to lady as man is to lord\n"
+          ]
         }
-      ],
-      "source": [
-        "analogy('man', 'king', 'woman', embeddings_dict)"
       ]
     },
     {
