--- a/TC4033_Activity3a_ID01.ipynb
+++ b/TC4033_Activity3a_ID01.ipynb
@@ -424,7 +424,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Funtion for computing cosine similarity between 2 vectors, required for analogy function:\n",
+        "# Funtion for computing cosine similarity between 2 vectors, required for \"analogy\" & \"find_most_similar\" function:\n",
         "def cosine_similarity(vec_a, vec_b):\n",
         "    \"\"\"\n",
         "    Calculate the cosine similarity between two vectors.\n",
@@ -523,14 +523,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "bb50e0f7",
       "metadata": {
         "id": "bb50e0f7"
       },
       "outputs": [],
       "source": [
-        "# most similar\n",
+        "# Function for identifying the most similar words to a certain word with embedding vectors\n",
         "def find_most_similar(word, embeddings_dict, top_n=10):\n",
         "    \"\"\"\n",
         "    Find the 'top_n' most similar words to the given word based on word embeddings.\n",
@@ -557,28 +557,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "7946d712",
       "metadata": {
         "id": "7946d712"
       },
       "outputs": [],
       "source": [
+        "# Let's test our function with the word \"mexico\":\n",
         "most_similar = find_most_similar('mexico', embeddings_dict)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "3b6e0ea1",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "3b6e0ea1",
-        "outputId": "41db70e1-8043-41a3-c7a1-71a8e678ba32"
+        "outputId": "f117b9f3-98a6-4f70-af9d-738d8495b050"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1 ---> mexican\n",
             "2 ---> venezuela\n",
@@ -600,63 +604,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "09875cae",
       "metadata": {
         "id": "09875cae"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Let's test our function with the word \"sad\":\n",
+        "most_similar1 = find_most_similar('sad', embeddings_dict)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "985bfda4",
       "metadata": {
-        "id": "985bfda4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "985bfda4",
+        "outputId": "7b408d64-3670-4de8-decb-5bc04909c70e"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 ---> awful\n",
+            "2 ---> sorry\n",
+            "3 ---> terrible\n",
+            "4 ---> sadly\n",
+            "5 ---> feeling\n",
+            "6 ---> horrible\n",
+            "7 ---> feels\n",
+            "8 ---> tragic\n",
+            "9 ---> terribly\n",
+            "10 ---> feel\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i, w in enumerate(most_similar1, 1):\n",
+        "    print(f'{i} ---> {w[0]}')"
+      ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "f06f33c5",
+      "cell_type": "markdown",
+      "source": [
+        "##Bibliography:\n",
+        "* Theiler, S. (2022, 5 julio). Basics of using pre-trained GlOVE vectors in Python. Medium. https://medium.com/analytics-vidhya/basics-of-using-pre-trained-glove-vectors-in-python-d38905f356db\n",
+        "* Pepe Cantoral, Ph.D. (2023, 26 octubre). ¿Qué son Word EMBEDDINGS? ¡Explorando embeddings con GloVe y Python! [Vídeo]. YouTube. https://www.youtube.com/watch?v=LagcbjDkqJE"
+      ],
       "metadata": {
-        "id": "f06f33c5"
+        "id": "AH2EMXn5IPYw"
       },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "05e86fa7",
-      "metadata": {
-        "id": "05e86fa7"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "e1e1838b",
-      "metadata": {
-        "id": "e1e1838b"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "fe1a9fad",
-      "metadata": {
-        "id": "fe1a9fad"
-      },
-      "outputs": [],
-      "source": []
+      "id": "AH2EMXn5IPYw"
     }
   ],
   "metadata": {
