--- a/TC5033_Activity3b_ID01.ipynb
+++ b/TC5033_Activity3b_ID01.ipynb
@@ -644,12 +644,14 @@
             "Epoch 4/10, Loss: 0.2919582261608785\n",
             "Epoch 5/10, Loss: 0.23450196525546546\n",
             "Epoch 6/10, Loss: 0.1919069536685094\n",
-            "Epoch 7/10, Loss: 0.15960772611607849\n"
+            "Epoch 7/10, Loss: 0.15960772611607849\n",
+            "Epoch 8/10, Loss: 0.13270434277959503\n"
           ]
         }
       ],
       "source": [
-        "train(rnn_model, optimiser,epochs, train_loader)"
+        "# Training our RNN model with the previously defined parameters:\n",
+        "train(rnn_model, optimiser, epochs, train_loader)"
       ]
     },
     {
@@ -849,12 +851,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "y_true, y_pred = get_predictions(rnn_model, test_loader)\n",
+        "skplt.metrics.plot_confusion_matrix(y, predictions, normalize=True)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "yIv4Rg0_JzWV"
+      },
+      "id": "yIv4Rg0_JzWV",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Bibliography:\n",
         "* Pepe Cantoral, Ph.D. (2023b, octubre 30). ¡LSTM: todo lo que necesitas saber! [Vídeo]. YouTube. https://www.youtube.com/watch?v=f6PaCo-NfJA\n",
         "* First steps with SciKit-Plot — Scikit-Plot documentation. (s. f.). https://scikit-plot.readthedocs.io/en/stable/Quickstart.html\n",
-        "*"
+        "* RNN — PyTorch 2.1 documentation. (s. f.). https://pytorch.org/docs/stable/generated/torch.nn.RNN.html"
       ],
       "metadata": {
         "id": "cgpBeSh3IEhV"
