--- a/TC5033_Activity3b_ID01.ipynb
+++ b/TC5033_Activity3b_ID01.ipynb
@@ -645,7 +645,8 @@
             "Epoch 5/10, Loss: 0.23450196525546546\n",
             "Epoch 6/10, Loss: 0.1919069536685094\n",
             "Epoch 7/10, Loss: 0.15960772611607849\n",
-            "Epoch 8/10, Loss: 0.13270434277959503\n"
+            "Epoch 8/10, Loss: 0.13270434277959503\n",
+            "Epoch 9/10, Loss: 0.1103283310764759\n"
           ]
         }
       ],
