--- a/TC5033_Activity3b_ID01.ipynb
+++ b/TC5033_Activity3b_ID01.ipynb
@@ -623,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "aec12a1b",
       "metadata": {
         "scrolled": true,
@@ -646,7 +646,8 @@
             "Epoch 6/10, Loss: 0.1919069536685094\n",
             "Epoch 7/10, Loss: 0.15960772611607849\n",
             "Epoch 8/10, Loss: 0.13270434277959503\n",
-            "Epoch 9/10, Loss: 0.1103283310764759\n"
+            "Epoch 9/10, Loss: 0.1103283310764759\n",
+            "Epoch 10/10, Loss: 0.09042867327954027\n"
           ]
         }
       ],
@@ -657,19 +658,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "7a3ef175",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "7a3ef175",
-        "outputId": "7d30678b-664f-4c8b-d90f-d459d4445a46"
+        "outputId": "de1288ed-b435-4640-d08c-187852e7c1a4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Accuracy Test: 90.2883 %\n",
-            "Accuracy Val: 90.3957 %\n"
+            "Accuracy Test: 90.6115 %\n",
+            "Accuracy Val: 90.7354 %\n"
           ]
         }
       ],
