--- a/Rigo_A4_DL_TC5033_text_generator.ipynb
+++ b/Rigo_A4_DL_TC5033_text_generator.ipynb
@@ -195,9 +195,10 @@
       },
       "outputs": [],
       "source": [
-        "# Build the vocabulary . build_vocab_from_iterator from pytorch\n",
+        "# build_vocab_from_iterator from pytorch allows to build a vocabulary with a token iterator (like yield_tokens),\n",
+        "# 'specials' allows to add symbols and preserved the order of tokens\n",
         "vocab = build_vocab_from_iterator(yield_tokens(train_dataset), specials=[\"<unk>\", \"<pad>\", \"<bos>\", \"<eos>\"])\n",
-        "#set unknown token at position 0\n",
+        "# set unknown token at position 0\n",
         "vocab.set_default_index(vocab[\"<unk>\"])"
       ]
     },
