--- a/Rigo_A4_DL_TC5033_text_generator.ipynb
+++ b/Rigo_A4_DL_TC5033_text_generator.ipynb
@@ -158,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "id": "f3288ce5",
       "metadata": {
         "id": "f3288ce5"
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "id": "fc4c7dbd",
       "metadata": {
         "id": "fc4c7dbd"
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "id": "2c2cb068",
       "metadata": {
         "id": "2c2cb068"
@@ -204,22 +204,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "134b832b",
       "metadata": {
         "id": "134b832b"
       },
       "outputs": [],
       "source": [
+        "# Variable to set the lenght of the data for function data_process.\n",
         "seq_length = 50\n",
+        "# Function definition for processing each dataset considering a sequence lenght\n",
         "def data_process(raw_text_iter, seq_length = 50):\n",
-        "    data = [torch.tensor(vocab(tokeniser(item)), dtype=torch.long) for item in raw_text_iter]\n",
-        "    data = torch.cat(tuple(filter(lambda t: t.numel() > 0, data))) #remove empty tensors\n",
+        "    data = [torch.tensor(vocab(tokeniser(item)), dtype=torch.long) for item in raw_text_iter] # tokenization is applied for each sentence in dataset\n",
+        "    data = torch.cat(tuple(filter(lambda t: t.numel() > 0, data))) # Remove empty tensors,\n",
+        "    # concatenating a tupple (ordered and unchangeable collection of data) with no empty strings from input data\n",
         "#     target_data = torch.cat(d)\n",
         "    return (data[:-(data.size(0)%seq_length)].view(-1, seq_length),\n",
-        "            data[1:-(data.size(0)%seq_length-1)].view(-1, seq_length))\n",
+        "            data[1:-(data.size(0)%seq_length-1)].view(-1, seq_length))  # Function returns the processed data in sentences of 50 tokens\n",
         "\n",
-        "# # Create tensors for the training set\n",
+        "# Create tensors for each dataset (training, validation and testing) with the desired sentence lenght:\n",
         "x_train, y_train = data_process(train_dataset, seq_length)\n",
         "x_val, y_val = data_process(val_dataset, seq_length)\n",
         "x_test, y_test = data_process(test_dataset, seq_length)"
@@ -227,13 +230,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "4b54c04d",
       "metadata": {
         "id": "4b54c04d"
       },
       "outputs": [],
       "source": [
+        "# Creating a dataset of tensors for training, validation and testing dataset\n",
         "train_dataset = TensorDataset(x_train, y_train)\n",
         "val_dataset = TensorDataset(x_val, y_val)\n",
         "test_dataset = TensorDataset(x_test, y_test)"
@@ -241,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "f4d400fb",
       "metadata": {
         "id": "f4d400fb"
@@ -249,6 +253,7 @@
       "outputs": [],
       "source": [
         "batch_size = 32  # choose a batch size that fits your computation resources\n",
+        "# Using DataLoader to iterate each tensor dataset in minibatches of previously defined batch_size\n",
         "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
         "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
         "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=True, drop_last=True)"
@@ -256,14 +261,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "59c63b01",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "59c63b01",
-        "outputId": "07a46bc7-e32d-40be-dea4-f66fd2c4a038"
+        "outputId": "0b10c396-ebbe-4c4c-ad61-5daa61fe13ec"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "LSTMModel(\n",
@@ -273,9 +282,8 @@
               ")"
             ]
           },
-          "execution_count": 52,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 13
         }
       ],
       "source": [
@@ -283,24 +291,22 @@
         "# Feel free to experiment\n",
         "class LSTMModel(nn.Module):\n",
         "    def __init__(self, vocab_size, embed_size, hidden_size, num_layers):\n",
-        "        super(LSTMModel, self).__init__()\n",
-        "        self.embeddings = nn.Embedding(vocab_size, embed_size)\n",
-        "        self.hidden_size = hidden_size\n",
-        "        self.num_layers = num_layers\n",
-        "        self.lstm = nn.LSTM(embed_size, hidden_size, num_layers, batch_first=True,dropout=0.65)\n",
-        "        self.fc = nn.Linear(hidden_size, vocab_size)\n",
+        "        super(LSTMModel, self).__init__() # Initialization of class hierarchy, super is used to refer to parent class.\n",
+        "        self.embeddings = nn.Embedding(vocab_size, embed_size) # Lookup table that stores embeddings of a dictionary with specified size (embed_size)\n",
+        "        self.hidden_size = hidden_size # Size definition of hidden layers\n",
+        "        self.num_layers = num_layers # Definition of number of layers\n",
+        "        self.lstm = nn.LSTM(embed_size, hidden_size, num_layers, batch_first=True,dropout=0.65) # Applying LSTM RNN to input sentences.\n",
+        "        self.fc = nn.Linear(hidden_size, vocab_size) # Applyng Linear (fully connected layer)\n",
         "\n",
-        "    def forward(self, text, hidden):\n",
-        "        embeddings = self.embeddings(text)\n",
-        "        output, hidden = self.lstm(embeddings, hidden)\n",
-        "        decoded = self.fc(output)\n",
+        "    def forward(self, text, hidden): # Forward propagation definition\n",
+        "        embeddings = self.embeddings(text) # Embeddings of text input\n",
+        "        output, hidden = self.lstm(embeddings, hidden) # concatenation of the forward and reverse hidden state at each time step in the sequence\n",
+        "        decoded = self.fc(output) # Definition of linear layer\n",
         "        return decoded, hidden\n",
         "\n",
         "    def init_hidden(self, batch_size):\n",
-        "\n",
-        "        return (torch.zeros(self.num_layers, batch_size, self.hidden_size).to(device),\n",
-        "                torch.zeros(self.num_layers, batch_size, self.hidden_size).to(device))\n",
-        "\n",
+        "        return (torch.zeros(self.num_layers, batch_size, self.hidden_size).to(device), # Creating a 3D tensor filled with zeros of the specified dimensions\n",
+        "                torch.zeros(self.num_layers, batch_size, self.hidden_size).to(device)) # .to(device) allows to move tensor to the specified computing device\n",
         "\n",
         "\n",
         "vocab_size = len(vocab) # vocabulary size\n",
