--- a/Rigo_A4_DL_TC5033_text_generator.ipynb
+++ b/Rigo_A4_DL_TC5033_text_generator.ipynb
@@ -320,89 +320,15 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "215eabb9",
-      "metadata": {
-        "id": "215eabb9"
-      },
-      "outputs": [],
-      "source": [
-        "def train(model, epochs, optimizer):\n",
-        "    '''\n",
-        "    The following are possible instructions you may want to conside for this function.\n",
-        "    This is only a guide and you may change add or remove whatever you consider appropriate\n",
-        "    as long as you train your model correctly.\n",
-        "        - loop through specified epochs\n",
-        "        - loop through dataloader\n",
-        "        - don't forget to zero grad!\n",
-        "        - place data (both input and target) in device\n",
-        "        - init hidden states e.g. hidden = model.init_hidden(batch_size)\n",
-        "        - run the model\n",
-        "        - compute the cost or loss\n",
-        "        - backpropagation\n",
-        "        - Update paratemers\n",
-        "        - Include print all the information you consider helpful\n",
-        "\n",
-        "    '''\n",
-        "\n",
-        "\n",
-        "    model = model.to(device=device)\n",
-        "    model.train()\n",
-        "    criterion = nn.CrossEntropyLoss()\n",
-        "\n",
-        "    for epoch in range(epochs):\n",
-        "        total_loss = 0\n",
-        "        for i, (data, targets) in enumerate((train_loader)):\n",
-        "\n",
-        "             # Step 1: Zero the gradients\n",
-        "            optimizer.zero_grad()\n",
-        "\n",
-        "            # Step 2: Send the input data and targets to the device\n",
-        "            data = data.to(device)\n",
-        "            targets = targets.to(device)\n",
-        "\n",
-        "            # Step 3: Initialize hidden state and send it to the device (if model uses LSTM)\n",
-        "            if isinstance(model, nn.LSTM):\n",
-        "                hidden = model.init_hidden(batch_size)\n",
-        "                hidden = (hidden[0].to(device), hidden[1].to(device))\n",
-        "            else:\n",
-        "                hidden = None\n",
-        "\n",
-        "            # Step 4: Forward pass - run the model on the data\n",
-        "            output, hidden = model(data, hidden)\n",
-        "\n",
-        "            # Reshape output for loss calculation\n",
-        "            output = output.view(-1, vocab_size)\n",
-        "            targets = targets.view(-1)\n",
-        "\n",
-        "            # Step 5: Compute the loss\n",
-        "            loss = loss_function(output, targets)\n",
-        "\n",
-        "            # Step 6: Backpropagation\n",
-        "            loss.backward()\n",
-        "\n",
-        "            # Step 7: Update the model parameters\n",
-        "            optimizer.step()\n",
-        "\n",
-        "            # Aggregate loss for reporting\n",
-        "            total_loss += loss.item()\n",
-        "\n",
-        "        average_loss = total_loss / len(train_loader)\n",
-        "        print(f'Epoch {epoch + 1}/{epochs} - Loss: {average_loss:.4f}')\n",
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "eWIUkG4zm0ty"
       },
       "outputs": [],
       "source": [
         "def train(model, epochs, optimizer):\n",
-        "    model = model.to(device)\n",
-        "    model.train()\n",
-        "    criterion = nn.CrossEntropyLoss()\n",
+        "    model = model.to(device) # to move our tensor model to the specified computing device\n",
+        "    model.train() # Set the model to training mode (to activate training specific behaviors)\n",
+        "    criterion = nn.CrossEntropyLoss() #\n",
         "\n",
         "    for epoch in range(epochs):\n",
         "        total_loss = 0\n",
